--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "build": "turbo run build",
-    "dev": "turbo run dev -F web",
+    "dev": "turbo run dev -F docs",
     "lint": "turbo run lint",
     "format": "prettier --write ."
   },
