--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -22,6 +22,7 @@
 		"@tailwindcss/typography": "^0.5.13",
 		"@types/eslint": "^8.56.10",
 		"@types/node": "20.12.12",
+		"@types/sortablejs": "^1.15.8",
 		"@typescript-eslint/eslint-plugin": "^7.11.0",
 		"@typescript-eslint/parser": "^7.11.0",
 		"autoprefixer": "10.4.19",
@@ -31,6 +32,7 @@
 		"postcss": "8.4.38",
 		"prettier": "^3.2.5",
 		"prettier-plugin-svelte": "^3.2.3",
+		"sortablejs": "^1.15.2",
 		"svelte": "^4.2.17",
 		"svelte-check": "^3.7.1",
 		"tailwindcss": "3.4.3",
@@ -44,6 +46,7 @@
 	"dependencies": {
 		"@flexilte/core": "workspace:^",
 		"@flexilte/skeleton": "workspace:^",
+		"@iconify/svelte": "^4.0.2",
 		"highlight.js": "11.9.0"
 	}
 }
