--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev -F docs",
+    "preview": "turbo run preview -F docs",
     "lint": "turbo run lint",
     "format": "prettier --write ."
   },
