--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -50,6 +50,7 @@
 		"@flexilte/core": "workspace:^",
 		"@flexilte/skeleton": "workspace:^",
 		"@iconify/svelte": "^4.0.2",
+		"gridstack": "^10.2.0",
 		"highlight.js": "11.9.0"
 	}
 }
